@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=Cadabra
 GenericName=Cadabra computer algebra system
 Comment=Computer algebra system for field theory problems
-Icon=cadabra
+Icon=cadabra.png
 Type=Application
 Categories=Math;Science;Education
 Exec=xcadabra
